# mantram

./: .gitattributes  .gitignore  README.md  astro.config.mjs  components.json  eslint.config.js  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
.github/workflows/: deploy.yml
mantram-parser/: Cargo.toml  README.md
mantram-parser/src/: lib.rs  parser.rs
public/: CNAME
src/components/: footer.astro  hanzi.astro  header-menu.tsx  header.astro  post-char.astro  post-list.astro  post-pager.astro  theme-toggle.tsx
src/components/ui/: command.tsx
src/content/: config.ts
src/content/posts/: an-tu-di-cen-yen.md  chi-fo-mie-cui-cen-yen.md  chi-fu-mie-cui-cen-yen.md  chieh-chieh-cou.md  cing-khou-ye-cen-yen.md  cing-shen-cen-yen.md  cuen-thi-shen-cou.md  fo-suo-a-mi-thuo-cing.md  jie-jie-zhou.md  kao-wang-kuan-she-yin-cing.md  kuan-she-yin-phu-sat-ciu-khu-cen-cing.md  liu-mu-cing.md  san-kuei-yi.md  sin-cing.md  ta-pei-cou.md  ta-se-ce-phu-sat-nien-fo-yuen-thung-cang.md  wang-sen-cing-thu-shen-cou.md  yau-she-kuan-ting-cen-yen.md
src/lib/: parser.ts  posts.ts
src/pages/: 404.astro  _post-layout.astro  _root-layout.astro  index.astro
src/pages/posts/: [...slug].astro
