[package]
name = "mantram-parser"
version = "0.1.0"
authors = ["Nico Dinata <nicodnt@icloud.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
nom = "7.1.3"
rstest = "0.21.0"
serde = { version = "1.0.203", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
strum = "0.26.2"
strum_macros = "0.26.3"
tsify = { version = "0.4.5", default-features = false, features = ["js"] }
wasm-bindgen = "0.2.92"
